@@ -1,48 +1,53 @@
 package com.avsofthealthcare.service.impl;
 
 import com.avsofthealthcare.dto.HospitalListDropdownDto;
+import com.avsofthealthcare.dto.HospitalRequestListDTO;
 import com.avsofthealthcare.entity.HospitalList;
 import com.avsofthealthcare.mapper.HospitalListMapper;
 import com.avsofthealthcare.repository.HospitalListRepository;
 import com.avsofthealthcare.service.HospitalListService;
-import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
 public class HospitalListServiceImpl implements HospitalListService {
 
     @Autowired
-    private HospitalListRepository hospitalListRepository;
-
-	@Override
-	public List<HospitalList> getAllHospitals() {
-		return hospitalListRepository.findAllSortedByNameLettersFirst();
-	}
+    private HospitalListRepository repository;
 
     @Override
-    public HospitalList getHospitalById(Long id) {
-        return hospitalListRepository.findById(id).orElse(null);
+    public List<HospitalRequestListDTO> getAllHospitals() {
+        return repository.findAll().stream()
+                .map(HospitalListMapper::mapToHospitalRequestListDTO)
+                .toList();
     }
 
     @Override
-    public HospitalList saveHospital(HospitalList hospitalList) {
-        return hospitalListRepository.save(hospitalList);
+    public HospitalRequestListDTO getHospitalById(Long id) {
+        HospitalList hospitalList = repository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Hospital not found"));
+        return HospitalListMapper.mapToHospitalRequestListDTO(hospitalList);
+    }
+
+    @Override
+    public HospitalRequestListDTO saveHospital(HospitalRequestListDTO hospitalRequestListDTO) {
+        HospitalList hospitalList = HospitalListMapper.mapToHospitalList(hospitalRequestListDTO);
+        HospitalList saved = repository.save(hospitalList);
+        return HospitalListMapper.mapToHospitalRequestListDTO(saved);
     }
 
     @Override
     public void deleteHospital(Long id) {
-        hospitalListRepository.deleteById(id);
+        repository.deleteById(id);
     }
 
     @Override
     public List<HospitalListDropdownDto> getHospitalDropdown() {
-        return hospitalListRepository.findAll().stream()
+        return repository.findAllSortedByNameLettersFirst()
+                .stream()
                 .map(HospitalListMapper::toDropdownDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
